--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-minimal
 title: 💻✒️📄🌟
 description: Raffaello Paletta's CV
-avatar: "/assets/img/avatar.jpeg"
+avatar: "/assets/img/avatar.png"
 round-avatar: true
