--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,4 @@
 theme: jekyll-theme-minimal
 title: 💻✒️📄🌟
 description: Raffaello Paletta's CV
-avatar: "/assets/img/avatar.png"
-round-avatar: true
+logo: "/assets/img/avatar.png"
