--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-minimal
 title: 💻✒️📄🌟
 description: Raffaello Paletta's CV
-logo: "/assets/img/avatar.png"
+logo: /assets/img/avatar.png
