--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 theme: jekyll-theme-minimal
-description: Raffaello Paletta's CV
+title: Raffaello Paletta
+description: Senior Software Engineer
 logo: /assets/img/avatar.png
