--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,8 @@ theme: jekyll-theme-minimal
 title: Raffaello Paletta
 description: "Senior Software Engineer<br/><br/>
 <b>Job Positions<b><br/>
-<a href='index.md'>Oct 2017 - Present</a><br/>
-<a href='alternet.md'>Apr 2009 - Oct 2017</a><br/>
+<a href='index'>Oct 2017 - Present</a><br/>
+<a href='alternet'>Apr 2009 - Oct 2017</a><br/>
+<a href='threeboox'>Feb 2007 - Apr 2009</a><br/>
 "
 logo: /assets/img/avatar.png
