--- a/_config.yml
+++ b/_config.yml
@@ -5,5 +5,12 @@ description: "Senior Software Engineer<br/><br/>
 <a href='index'>Oct 2017 - Present</a><br/>
 <a href='alternet'>Apr 2009 - Oct 2017</a><br/>
 <a href='threeboox'>Feb 2007 - Apr 2009</a><br/>
+<br/>
+<b>Other<b><br/>
+<a href='freetimejobs'>Latest Free Time Jobs</a><br/>
+<a href='articles'>Articles</a><br/>
+<br/>
+<b>Contacts<b><br/>
+<img alt="LinkedIn" src="https://img.shields.io/badge/linkedin%20-%230077B5.svg?&style=for-the-badge&logo=linkedin&logoColor=white&link=https://it.linkedin.com/in/raffaellopaletta"/>
 "
 logo: /assets/img/avatar.png
