--- a/_config.yml
+++ b/_config.yml
@@ -11,6 +11,6 @@ description: "Senior Software Engineer<br/><br/>
 <a href='articles'>Articles</a><br/>
 <br/>
 <b>Contacts<b><br/>
-<img alt="LinkedIn" src="https://img.shields.io/badge/linkedin%20-%230077B5.svg?&style=for-the-badge&logo=linkedin&logoColor=white&link=https://it.linkedin.com/in/raffaellopaletta"/>
+<img alt='LinkedIn' src='https://img.shields.io/badge/linkedin%20-%230077B5.svg?&style=for-the-badge&logo=linkedin&logoColor=white&link=https://it.linkedin.com/in/raffaellopaletta'/>
 "
 logo: /assets/img/avatar.png
